<resources>
    <string name="app_name">GORENT</string>
    <string name="logo">Logo</string>
    <string name="gorent">GORENT</string>
    <string name="easy_way_to_rent_the_best_vehicle_for_you_with_the_best_price">Easy way to rent the best vehicle for you with the best price!</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in">sign-in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="GORENT" />
    <string name="log_in">LOG-IN</string>
    <string name="we_are_happy_to_see_you_again">We are happy to see you again</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">Password</string>
    <string name="signin">SIGN-IN</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="name">Name</string>
    <string name="your_dream_vehicle_is_just_a_click_away">Your dream vehicle is just a click away!</string>
    <string name="age">Age</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="follow_us">Follow Us</string>
</resources>