<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/opensauceonebold"
        android:text="@string/signin"
        android:textColor="#FEFEFE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/logintext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="328dp"
        android:fontFamily="@font/opensauceonebold"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintext3"
        android:layout_width="270dp"
        android:layout_height="29dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensauceonesemibold"
        android:lineSpacingExtra="4sp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/logintext4"
        android:layout_width="270dp"
        android:layout_height="29dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/opensauceonesemibold"
        android:lineSpacingExtra="4sp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext1"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/loginEnteredEmail"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/customemailicon"
        android:drawablePadding="12sp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logintext3"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/loginEnteredPassword"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custompasswordicon"
        android:drawablePadding="12sp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logintext4"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginTop="584dp"
        android:background="@drawable/roundedbuton"
        android:fontFamily="@font/opensauceonesemibold"
        android:letterSpacing="0"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/loginYoutubeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="705dp"
        android:background="@drawable/youtubeicon"
        app:layout_constraintStart_toEndOf="@+id/loginFacebookButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/loginFacebookButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="705dp"
        android:background="@drawable/facebookicon"
        app:layout_constraintStart_toEndOf="@+id/loginTwitterButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/loginTwitterButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="705dp"
        android:background="@drawable/twittericon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/logintext7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/opensauceoneregular"
        android:text="Follow Us"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/logintext6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/opensauceoneregular"
        android:text="@string/register"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/logintext5"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/logintext5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensauceoneregular"
        android:text="@string/don_t_have_an_account"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/logintext2"
        android:layout_width="270dp"
        android:layout_height="29dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensauceoneregular"
        android:lineSpacingExtra="4sp"
        android:text="@string/we_are_happy_to_see_you_again"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext1"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/loginback"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/backicon"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>