<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/signupbackground"
    tools:context=".SignUpActivity">



    <Button
        android:id="@+id/signupBack"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/backicon"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/opensauceonebold"
        android:lineSpacingExtra="-1sp"
        android:text="@string/sign_up"
        android:textColor="#FEFEFE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/signuptext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/opensauceonebold"
        android:text="Welcome"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/signuptext2"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_below="@+id/signuptext1"
        android:layout_marginStart="59dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/opensauceoneregular"
        android:lineSpacingExtra="4sp"
        android:text="@string/your_dream_vehicle_is_just_a_click_away"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptext1"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:id="@+id/ScrollViewID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true"
        android:layout_marginTop="360dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/signuptext3"
                android:layout_width="270dp"
                android:layout_height="29dp"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/opensauceonesemibold"
                android:lineSpacingExtra="4sp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/signupEnteredName"
                android:layout_width="284dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/signuptext3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="54.5dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="54dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/customnameicon"
                android:drawablePadding="12sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/signuptext4"
                android:layout_width="270dp"
                android:layout_height="29dp"
                android:layout_below="@+id/signupEnteredName"
                android:layout_marginStart="60dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/opensauceonesemibold"
                android:lineSpacingExtra="4sp"
                android:text="@string/age"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/signupEnteredAge"
                android:layout_width="284dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/signuptext4"
                android:layout_marginStart="55dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/customageicon"
                android:drawablePadding="12sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/logintext5"
                android:layout_width="270dp"
                android:layout_height="29dp"
                android:layout_below="@+id/signupEnteredAge"
                android:layout_marginStart="60dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/opensauceonesemibold"
                android:lineSpacingExtra="4sp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/signupEnteredEmail"
                android:layout_width="284dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/logintext5"
                android:layout_marginStart="55dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/customemailicon"
                android:drawablePadding="12sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/signuptext6"
                android:layout_width="270dp"
                android:layout_height="29dp"
                android:layout_below="@+id/signupEnteredEmail"
                android:layout_marginStart="60dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/opensauceonesemibold"
                android:lineSpacingExtra="4sp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/signupEnteredPassword"
                android:layout_width="284dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/signuptext6"
                android:layout_marginStart="55dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custompasswordicon"
                android:drawablePadding="12sp"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/signupbutton"
                android:layout_width="284dp"
                android:layout_height="44dp"
                android:layout_below="@+id/signupEnteredPassword"
                android:layout_marginStart="55dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/roundedbuton"
                android:fontFamily="@font/opensauceonesemibold"
                android:letterSpacing="0"
                android:text="SIGN-UP"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/signuptext7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signupbutton"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/opensauceoneregular"
                android:text="@string/already_have_an_account"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/signuptext8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signupbutton"
                android:layout_marginStart="250dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/opensauceoneregular"
                android:text="Sign-in"
                android:textColor="@color/purple"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/signuptext7"
                tools:ignore="HardcodedText,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/signuptext9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signupbutton"
                android:layout_marginStart="160dp"
                android:layout_marginTop="57dp"
                android:fontFamily="@font/opensauceoneregular"
                android:text="@string/follow_us"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/signupTwitterButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/signuptext9"
                android:layout_marginStart="108dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/twittericon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/signupFacebookButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/signuptext9"
                android:layout_marginStart="166dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/facebookicon"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/signupYoutubeButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/signuptext9"
                android:layout_marginStart="224dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/youtubeicon"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />


        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>